--- a/source/dotnet/AdaptiveCards.BotClient.XamarinForms/AdaptiveCards.BotClient.XamarinForms/App.xaml
+++ b/source/dotnet/AdaptiveCards.BotClient.XamarinForms/AdaptiveCards.BotClient.XamarinForms/App.xaml
@@ -3,81 +3,84 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:system="clr-namespace:System;assembly=System.Runtime"
              x:Class="AdaptiveCards.XamarinForms.BotClient.App">
-  <Application.Resources>
+    <Application.Resources>
 
-    <ResourceDictionary>
-    <!-- Application resource dictionary -->
-    <Style x:Key="Error" TargetType="Label">
-      <Setter Property="FontSize" Value="16"/>
-      <Setter Property="TextColor" Value="Maroon"/>
-    </Style>
+        <ResourceDictionary>
+            <!-- Application resource dictionary -->
+            <Style x:Key="Error" TargetType="Label">
+                <Setter Property="FontSize" Value="16"/>
+                <Setter Property="TextColor" Value="Maroon"/>
+            </Style>
 
-    <Style x:Key="Hidden" TargetType="View">
-      <Setter Property="IsVisible" Value="False"/>
-    </Style>
+            <Style x:Key="Hidden" TargetType="View">
+                <Setter Property="IsVisible" Value="False"/>
+            </Style>
 
-    <!-- Label definitions -->
-    <Style x:Key="Adaptive.TextBlock" TargetType="Label" >
-    </Style>
+            <!-- Label definitions -->
+            <Style x:Key="Adaptive.TextBlock" TargetType="Label" >
+            </Style>
 
-    <Style x:Key="Adaptive.TextBlock.Small" TargetType="Label" BasedOn="{StaticResource Adaptive.TextBlock}">
-      <Setter Property="FontSize" Value="10"/>
-    </Style>
+            <Style x:Key="Adaptive.TextBlock.Small" TargetType="Label" BasedOn="{StaticResource Adaptive.TextBlock}">
+                <Setter Property="FontSize" Value="10"/>
+            </Style>
 
-    <Style x:Key="Adaptive.TextBlock.Normal" TargetType="Label" BasedOn="{StaticResource Adaptive.TextBlock}">
-      <Setter Property="FontSize" Value="12"/>
-    </Style>
+            <Style x:Key="Adaptive.TextBlock.Normal" TargetType="Label" BasedOn="{StaticResource Adaptive.TextBlock}">
+                <Setter Property="FontSize" Value="12"/>
+            </Style>
 
-    <Style x:Key="Adaptive.TextBlock.Medium" TargetType="Label" BasedOn="{StaticResource Adaptive.TextBlock}">
-      <Setter Property="FontSize" Value="14"/>
-    </Style>
+            <Style x:Key="Adaptive.TextBlock.Medium" TargetType="Label" BasedOn="{StaticResource Adaptive.TextBlock}">
+                <Setter Property="FontSize" Value="14"/>
+            </Style>
 
-    <Style x:Key="Adaptive.TextBlock.Large" TargetType="Label" BasedOn="{StaticResource Adaptive.TextBlock}">
-      <Setter Property="FontSize" Value="17"/>
-    </Style>
+            <Style x:Key="Adaptive.TextBlock.Large" TargetType="Label" BasedOn="{StaticResource Adaptive.TextBlock}">
+                <Setter Property="FontSize" Value="17"/>
+            </Style>
 
-    <Style x:Key="Adaptive.TextBlock.ExtraLarge" TargetType="Label" BasedOn="{StaticResource Adaptive.TextBlock}">
-      <Setter Property="FontSize" Value="20"/>
-    </Style>
+            <Style x:Key="Adaptive.TextBlock.ExtraLarge" TargetType="Label" BasedOn="{StaticResource Adaptive.TextBlock}">
+                <Setter Property="FontSize" Value="20"/>
+            </Style>
 
-    <!-- color definitions -->
-    <Color x:Key="Adaptive.Default">Black</Color>
-    <Color x:Key="Adaptive.Accent">Blue</Color>
-    <Color x:Key="Adaptive.Dark">Black</Color>
-    <Color x:Key="Adaptive.Light">White</Color>
-    <Color x:Key="Adaptive.Good">Green</Color>
-    <Color x:Key="Adaptive.Warning">Yellow</Color>
-    <Color x:Key="Adaptive.Attention">Maroon</Color>
+            <!-- color definitions -->
+            <Color x:Key="Adaptive.Default">Black</Color>
+            <Color x:Key="Adaptive.Accent">Blue</Color>
+            <Color x:Key="Adaptive.Dark">Black</Color>
+            <Color x:Key="Adaptive.Light">White</Color>
+            <Color x:Key="Adaptive.Good">Green</Color>
+            <Color x:Key="Adaptive.Warning">Yellow</Color>
+            <Color x:Key="Adaptive.Attention">Maroon</Color>
 
-    
-    <!-- textWeight definitions -->
-    <!--<FontWeight x:Key="Adaptive.BolderFontWeight">Bold</FontWeight>
-    <FontWeight x:Key="Adaptive.NormalFontWeight">Normal</FontWeight>
-    <FontWeight x:Key="Adaptive.LighterFontWeight">Thin</FontWeight>-->
 
-    <!-- Text IsSubtle Opacity -->
-    <system:Double x:Key="Adaptive.IsSubtleOpacity">.50</system:Double>
+            <!-- textWeight definitions -->
+            <!--<FontWeight x:Key="Adaptive.BolderFontWeight">Bold</FontWeight>
+            <FontWeight x:Key="Adaptive.NormalFontWeight">Normal</FontWeight>
+            <FontWeight x:Key="Adaptive.LighterFontWeight">Thin</FontWeight>-->
 
-    <!-- adaptive card Styling -->
-    <Style x:Key="Adaptive.Card" TargetType="Grid">
-      <Setter Property="BackgroundColor" Value="White"/>
-      <Setter Property="Margin" Value="8"/>
-    </Style>
+            <!-- Text IsSubtle Opacity -->
+            <system:Double x:Key="Adaptive.IsSubtleOpacity">.50</system:Double>
 
-    <!-- Container Styling -->
-    <Style x:Key="Adaptive.Container" TargetType="Grid">
-    </Style>
+            <!-- adaptive card Styling -->
+            <Style x:Key="Adaptive.Card" TargetType="Grid">
+                <Setter Property="BackgroundColor" Value="LightGray"/>
+            </Style>
 
-    <!-- Column/ColumnSet Styling-->
-    <Style x:Key="Adaptive.ColumnSet" TargetType="Grid">
-    </Style>
+            <Style x:Key="Adaptive.InnerCard" TargetType="Grid">
+                <Setter Property="Margin" Value="8"/>
+            </Style>
 
-    <Style x:Key="Adaptive.Column" TargetType="Grid">
-    </Style>
+            <!-- Container Styling -->
+            <Style x:Key="Adaptive.Container" TargetType="Grid">
+            </Style>
 
-    <!-- Separator Styling -->
-    <Style x:Key="Adaptive.Separator" TargetType="Grid">
-      <Setter Property="Margin" Value="0,2,0,2"/>
+            <!-- Column/ColumnSet Styling-->
+            <Style x:Key="Adaptive.ColumnSet" TargetType="Grid">
+            </Style>
+
+            <Style x:Key="Adaptive.Column" TargetType="Grid">
+            </Style>
+
+            <!-- Separator Styling -->
+            <Style x:Key="Adaptive.Separator" TargetType="Grid">
+                <Setter Property="Margin" Value="0,2,0,2"/>
                 <!--<Setter Property="TextColor" Value="Transparent" />-->
                 <Setter Property="BackgroundColor" Value="Transparent" />
                 <!--<Setter Property="Template">
@@ -87,81 +90,81 @@
           </ControlTemplate>
         </Setter.Value>
       </Setter>-->
-    </Style>
-    <Style x:Key="Adaptive.Separator.Strong" TargetType="Grid">
-        <Setter Property="Margin" Value="0,3,0,3"/>
-    </Style>
+            </Style>
+            <Style x:Key="Adaptive.Separator.Strong" TargetType="Grid">
+                <Setter Property="Margin" Value="0,3,0,3"/>
+            </Style>
 
             <!-- you can define per View seperator styles like this -->
-    <!--<Style x:Key="Adaptive.Separator.Label" TargetType="Separator" BasedOn="{StaticResource Adaptive.Separator}">
+            <!--<Style x:Key="Adaptive.Separator.Label" TargetType="Separator" BasedOn="{StaticResource Adaptive.Separator}">
     </Style>
 
    -->
 
-    <!-- VerticalSeparator Styling -->
-    <Style x:Key="Adaptive.VerticalSeparator"  TargetType="Grid" >
-      <Setter Property="WidthRequest" Value="1"/>
-      <Setter Property="Margin" Value="8,0,8,0"/>
-      <Setter Property="BackgroundColor" Value="Transparent"/>
-    </Style>
+            <!-- VerticalSeparator Styling -->
+            <Style x:Key="Adaptive.VerticalSeparator"  TargetType="Grid" >
+                <Setter Property="WidthRequest" Value="1"/>
+                <Setter Property="Margin" Value="8,0,8,0"/>
+                <Setter Property="BackgroundColor" Value="Transparent"/>
+            </Style>
 
-    <Style x:Key="Adaptive.VerticalSeparator.Strong" TargetType="Grid" >
-      <Setter Property="WidthRequest" Value="1"/>
-      <Setter Property="Margin" Value="10,0,10,0"/>
-      <Setter Property="BackgroundColor" Value="Gray"/>
-    </Style>
+            <Style x:Key="Adaptive.VerticalSeparator.Strong" TargetType="Grid" >
+                <Setter Property="WidthRequest" Value="1"/>
+                <Setter Property="Margin" Value="10,0,10,0"/>
+                <Setter Property="BackgroundColor" Value="Gray"/>
+            </Style>
 
-    <!-- Fact/FactSet Styling -->
-    <Style x:Key="Adaptive.FactSet" TargetType="Grid">
-      <Setter Property="Margin" Value="0,2,0,2"/>
-    </Style>
+            <!-- Fact/FactSet Styling -->
+            <Style x:Key="Adaptive.FactSet" TargetType="Grid">
+                <Setter Property="Margin" Value="0,2,0,2"/>
+            </Style>
 
-    <Style x:Key="Adaptive.Fact.Name" TargetType="Label">
-      <Setter Property="Margin" Value="2, 2, 10, 2"/>
-      <Setter Property="FontAttributes" Value="Bold"/>
-    </Style>
+            <Style x:Key="Adaptive.Fact.Name" TargetType="Label">
+                <Setter Property="Margin" Value="2, 2, 10, 2"/>
+                <Setter Property="FontAttributes" Value="Bold"/>
+            </Style>
 
-    <Style x:Key="Adaptive.Fact.Value" TargetType="Label">
-      <Setter Property="Margin" Value="2"/>
-    </Style>
+            <Style x:Key="Adaptive.Fact.Value" TargetType="Label">
+                <Setter Property="Margin" Value="2"/>
+            </Style>
 
-    <!-- Image/ImageGallery Styling -->
-    <Style x:Key="Adaptive.Image" TargetType="Image">
-    </Style>
+            <!-- Image/ImageGallery Styling -->
+            <Style x:Key="Adaptive.Image" TargetType="Image">
+            </Style>
 
-    <Style x:Key="Adaptive.Image.Auto" TargetType="Image" BasedOn="{StaticResource Adaptive.Image}">
-      <Setter Property="HorizontalOptions" Value="Fill"/>
-    </Style>
+            <Style x:Key="Adaptive.Image.Auto" TargetType="Image" BasedOn="{StaticResource Adaptive.Image}">
+                <Setter Property="HorizontalOptions" Value="Fill"/>
+            </Style>
 
-    <Style x:Key="Adaptive.Image.Stretch" TargetType="Image" BasedOn="{StaticResource Adaptive.Image}">
-      <Setter Property="HorizontalOptions" Value="FillAndExpand"/>
-    </Style>
+            <Style x:Key="Adaptive.Image.Stretch" TargetType="Image" BasedOn="{StaticResource Adaptive.Image}">
+                <Setter Property="HorizontalOptions" Value="FillAndExpand"/>
+            </Style>
 
-    <Style x:Key="Adaptive.Image.Small" TargetType="Image" BasedOn="{StaticResource Adaptive.Image}">
-      <Setter Property="WidthRequest" Value="60"/>
-      <Setter Property="HeightRequest" Value="60"/>
-    </Style>
+            <Style x:Key="Adaptive.Image.Small" TargetType="Image" BasedOn="{StaticResource Adaptive.Image}">
+                <Setter Property="WidthRequest" Value="60"/>
+                <Setter Property="HeightRequest" Value="60"/>
+            </Style>
 
-    <Style x:Key="Adaptive.Image.Medium" TargetType="Image" BasedOn="{StaticResource Adaptive.Image}">
-      <Setter Property="WidthRequest" Value="120"/>
-      <Setter Property="HeightRequest" Value="120"/>
-    </Style>
+            <Style x:Key="Adaptive.Image.Medium" TargetType="Image" BasedOn="{StaticResource Adaptive.Image}">
+                <Setter Property="WidthRequest" Value="120"/>
+                <Setter Property="HeightRequest" Value="120"/>
+            </Style>
 
-    <Style x:Key="Adaptive.Image.Large" TargetType="Image" BasedOn="{StaticResource Adaptive.Image}">
-      <Setter Property="WidthRequest" Value="180"/>
-      <Setter Property="HeightRequest" Value="180"/>
-    </Style>
+            <Style x:Key="Adaptive.Image.Large" TargetType="Image" BasedOn="{StaticResource Adaptive.Image}">
+                <Setter Property="WidthRequest" Value="180"/>
+                <Setter Property="HeightRequest" Value="180"/>
+            </Style>
 
-    <!--<Style x:Key="Adaptive.ImageGallery" TargetType="ListBox">
+            <!--<Style x:Key="Adaptive.ImageGallery" TargetType="ListBox">
     </Style>-->
 
-    <!-- Circular Person mask -->
-    <!--<RadialGradientBrush x:Key="PersonMask" GradientOrigin="0.5,0.5" Center="0.5,0.5" RadiusX="0.5" RadiusY="0.5">
+            <!-- Circular Person mask -->
+            <!--<RadialGradientBrush x:Key="PersonMask" GradientOrigin="0.5,0.5" Center="0.5,0.5" RadiusX="0.5" RadiusY="0.5">
       <GradientStop Color="#ffffffff" Offset="0.9" />
       <GradientStop Color="#00ffffff" Offset="1.0" />
     </RadialGradientBrush>-->
 
-    <!--<Style x:Key="Adaptive.Image.Person" TargetType="Image" BasedOn="{StaticResource Adaptive.Image}">
+            <!--<Style x:Key="Adaptive.Image.Person" TargetType="Image" BasedOn="{StaticResource Adaptive.Image}">
       <Setter Property="OpacityMask" Value="{StaticResource PersonMask}"/>
     </Style>
 
@@ -186,45 +189,45 @@
     </Style>-->
 
 
-    <!-- Input definitions -->
-    <Style x:Key="Adaptive.Input" TargetType="View" >
-    </Style>
+            <!-- Input definitions -->
+            <Style x:Key="Adaptive.Input" TargetType="View" >
+            </Style>
 
-    <Style x:Key="Adaptive.Input.ChoiceSet" TargetType="View" >
-    </Style>
+            <Style x:Key="Adaptive.Input.ChoiceSet" TargetType="View" >
+            </Style>
 
-    <Style x:Key="Adaptive.Input.Text" TargetType="View" BasedOn="{StaticResource Adaptive.Input}">
-    </Style>
+            <Style x:Key="Adaptive.Input.Text" TargetType="View" BasedOn="{StaticResource Adaptive.Input}">
+            </Style>
 
-    <Style x:Key="Adaptive.Input.Date" TargetType="View"  BasedOn="{StaticResource Adaptive.Input}">
-    </Style>
+            <Style x:Key="Adaptive.Input.Date" TargetType="View"  BasedOn="{StaticResource Adaptive.Input}">
+            </Style>
 
-    <!--<Style TargetType="DatePickerTextBox">
+            <!--<Style TargetType="DatePickerTextBox">
       <Setter Property="Text" Value="{Binding Placeholder}"/>
     </Style>-->
 
-    <Style x:Key="Adaptive.Input.Time" TargetType="View"  BasedOn="{StaticResource Adaptive.Input}">
-    </Style>
+            <Style x:Key="Adaptive.Input.Time" TargetType="View"  BasedOn="{StaticResource Adaptive.Input}">
+            </Style>
 
-    <Style x:Key="Adaptive.Input.Number" TargetType="View"  BasedOn="{StaticResource Adaptive.Input}">
-    </Style>
+            <Style x:Key="Adaptive.Input.Number" TargetType="View"  BasedOn="{StaticResource Adaptive.Input}">
+            </Style>
 
-    <Style x:Key="Adaptive.Input.Toggle" TargetType="View"  BasedOn="{StaticResource Adaptive.Input}">
-    </Style>
+            <Style x:Key="Adaptive.Input.Toggle" TargetType="View"  BasedOn="{StaticResource Adaptive.Input}">
+            </Style>
 
-    <Style x:Key="Adaptive.Input.Text.Tel" TargetType="View"  BasedOn="{StaticResource Adaptive.Input.Text}">
-    </Style>
+            <Style x:Key="Adaptive.Input.Text.Tel" TargetType="View"  BasedOn="{StaticResource Adaptive.Input.Text}">
+            </Style>
 
-    <Style x:Key="Adaptive.Input.Text.Password" TargetType="View"  BasedOn="{StaticResource Adaptive.Input.Text}">
-    </Style>
+            <Style x:Key="Adaptive.Input.Text.Password" TargetType="View"  BasedOn="{StaticResource Adaptive.Input.Text}">
+            </Style>
 
-    <Style x:Key="Adaptive.Input.Text.Email" TargetType="View"  BasedOn="{StaticResource Adaptive.Input.Text}">
-    </Style>
+            <Style x:Key="Adaptive.Input.Text.Email" TargetType="View"  BasedOn="{StaticResource Adaptive.Input.Text}">
+            </Style>
 
-    <Style x:Key="Adaptive.Input.ChoiceInput.ComboBox" TargetType="View"  BasedOn="{StaticResource Adaptive.Input.ChoiceSet}">
-    </Style>
+            <Style x:Key="Adaptive.Input.ChoiceInput.ComboBox" TargetType="View"  BasedOn="{StaticResource Adaptive.Input.ChoiceSet}">
+            </Style>
 
-    <!--<Style x:Key="Adaptive.Input.ChoiceInput.ComboBoxItem" TargetType="ComboBoxItem"  >
+            <!--<Style x:Key="Adaptive.Input.ChoiceInput.ComboBoxItem" TargetType="ComboBoxItem"  >
     </Style>
 
     <Style x:Key="Adaptive.Input.ChoiceInput.Radio" TargetType="RadioButton"  >
@@ -233,26 +236,32 @@
     <Style x:Key="Adaptive.Input.ChoiceInput.CheckBox" TargetType="CheckBox"  >
     </Style>-->
 
-    <!-- Action Styles -->
-    <Style x:Key="Adaptive.Actions" TargetType="View"  >
-      <Setter Property="Margin" Value="4"/>
-      <Setter Property="HorizontalOptions" Value="End"/>
-    </Style>
+            <!-- Action Styles -->
+            <Style x:Key="Adaptive.Actions" TargetType="View">
+                <Setter Property="Margin" Value="4"/>
+                <Setter Property="HorizontalOptions" Value="End"/>
+            </Style>
 
-    <!--<Style x:Key="Adaptive.Action" TargetType="Button"  >
+            <!--<Style x:Key="Adaptive.Action" TargetType="Button">
       <Setter Property="Margin" Value="4"/>
       <Setter Property="HorizontalAlignment" Value="Stretch"/>
       <Setter Property="Template">
         <Setter.Value>
           <ControlTemplate TargetType="{x:Type Button}">
 
-            --><!-- Content handles within a border --><!--
+            
+             Content handles within a border 
+            
             <Border x:Name="bdr" CornerRadius="6" Margin="3" BorderThickness="1" BorderBrush="Black" Background="#FF5098FF">
-              --><!-- ContentPresenter properties. Set the content source as the content from each control define below --><!--
+              
+             ContentPresenter properties. Set the content source as the content from each control define below 
+            
               <ContentPresenter VerticalAlignment="Center" HorizontalAlignment="Center" ContentSource="Content" Label.FontSize="20"   />
             </Border>
 
-            --><!-- Required triggers define here --><!--
+            
+             Required triggers define here 
+            
             <ControlTemplate.Triggers>
               <Trigger Property="IsMouseOver" Value="True">
                 <Setter TargetName="bdr" Property="Opacity" Value=".6"/>
@@ -263,12 +272,12 @@
       </Setter>
     </Style>-->
 
-    <Style x:Key="Adaptive.Action.Title" TargetType="Label" >
-      <Setter Property="Margin" Value="4"/>
-      <Setter Property="TextColor" Value="White"/>
-    </Style>
+            <Style x:Key="Adaptive.Action.Title" TargetType="Label" >
+                <Setter Property="Margin" Value="4"/>
+                <Setter Property="TextColor" Value="White"/>
+            </Style>
 
-    <!--<Style x:Key="Adaptive.Action.OpenUrl" TargetType="Button"  BasedOn="{StaticResource Adaptive.Action}">
+            <!--<Style x:Key="Adaptive.Action.OpenUrl" TargetType="Button"  BasedOn="{StaticResource Adaptive.Action}">
     </Style>
 
     <Style x:Key="Adaptive.Action.ShowCard" TargetType="Button"  BasedOn="{StaticResource Adaptive.Action}">
@@ -280,7 +289,7 @@
     <Style x:Key="Adaptive.Action.Http" TargetType="Button"  BasedOn="{StaticResource Adaptive.Action}">
     </Style>-->
 
-    <!--<Style x:Key="Adaptive.Action.Tap" TargetType="Button">
+            <!--<Style x:Key="Adaptive.Action.Tap" TargetType="Button">
       <Style.Triggers>
         <Trigger Property="IsMouseOver" Value="True">
           <Setter Property="Cursor" Value="Hand" />
@@ -311,6 +320,6 @@
         </Setter.Value>
       </Setter>
     </Style>-->
-    </ResourceDictionary>
-  </Application.Resources>
+        </ResourceDictionary>
+    </Application.Resources>
 </Application>
