--- a/source/dotnet/Samples/WPFVisualizer/MainWindow.xaml
+++ b/source/dotnet/Samples/WPFVisualizer/MainWindow.xaml
@@ -72,7 +72,10 @@
             <Button Name="speak" Click="speak_Click" Content="Speak" Margin="4"/>
             <Button Name="toJson" Content="To JSON" Margin="4" Click="toJson_Click"/>
             <Button Name="toXml" Content="To XML" Margin="4" Click="toXml_Click"/>
-            <Button Name="toggleOptions" Content="RenderOptions" Margin="4" Click="toggleOptions_Click"/>
+            <Button Name="toggleOptions" Content="Edit HostConfig" Margin="4" Click="toggleOptions_Click"/>
+            <Button Name="loadConfig" Content="Load HostConfig" Margin="4" Click="loadConfig_Click"/>
+            <Button Name="saveConfig" Content="Save HostConfig" Margin="4" Click="saveConfig_Click"/>
+            <ComboBox Name="hostConfigs" IsEditable="False" Width="150" SelectionChanged="hostConfigs_Selected"/>
         </StackPanel>
 
         <!--<TextBox Grid.Row="1" AcceptsReturn="True" AcceptsTab="True" Name="textBox" TextChanged="textBox_TextChanged"></TextBox>-->
@@ -81,8 +84,7 @@
 
         <GridSplitter Grid.Row="1" Grid.Column="1" HorizontalAlignment="Stretch" ResizeDirection="Columns"/>
 
-        <Grid Grid.Row="1" Grid.Column="2" Background="DarkGray">
-            
+        <Grid Grid.Row="1" Grid.Column="2" Background="LightGray">
             <Grid Name="cardGrid" MaxWidth="700" VerticalAlignment="Top" Margin="10"  />
         </Grid>
 
@@ -90,7 +92,7 @@
 
 
         <GridSplitter Grid.Row="1" Grid.Column="4" VerticalAlignment="Stretch" ResizeDirection="Columns" Name="optionsSplitter" />
-        
+
         <!--<avalon:TextEditor Grid.Row="1" Grid.Column="5" Name="options" SyntaxHighlighting="Json" FontFamily="Consolas" FontSize="10pt"
                             ShowLineNumbers="true" TextChanged="options_TextChanged" Visibility="Collapsed"/>-->
         <xctk:PropertyGrid Grid.Row="1" Grid.Column="5"  SelectedObject="{Binding}" Name="hostConfigEditor" PropertyChanged="options_PropertyChanged" Visibility="Collapsed" >
