--- a/source/dotnet/Samples/WPFVisualizer/MainWindow.xaml
+++ b/source/dotnet/Samples/WPFVisualizer/MainWindow.xaml
@@ -67,15 +67,18 @@
         </Grid.ColumnDefinitions>
 
         <StackPanel Orientation="Horizontal" Grid.ColumnSpan="5">
-            <Button Name="loadButton" Click="loadButton_Click" Content="Load" Margin="4"/>
+            <Button Name="loadButton" Click="loadButton_Click" Content="Load Card..." Margin="4"/>
             <Button Name="viewImage" Click="viewImage_Click" Content="View as Image" Margin="4"/>
             <Button Name="speak" Click="speak_Click" Content="Speak" Margin="4"/>
             <Button Name="toJson" Content="To JSON" Margin="4" Click="toJson_Click"/>
             <Button Name="toXml" Content="To XML" Margin="4" Click="toXml_Click"/>
-            <Button Name="toggleOptions" Content="Edit HostConfig" Margin="4" Click="toggleOptions_Click"/>
-            <Button Name="loadConfig" Content="Load HostConfig" Margin="4" Click="loadConfig_Click"/>
-            <Button Name="saveConfig" Content="Save HostConfig" Margin="4" Click="saveConfig_Click"/>
-            <ComboBox Name="hostConfigs" IsEditable="False" Width="150" SelectionChanged="hostConfigs_Selected"/>
+        </StackPanel>
+        <StackPanel Orientation="Horizontal" Grid.ColumnSpan="5" HorizontalAlignment="Right">
+            <Label>HostConfig:</Label>
+            <Button Name="loadConfig" Content="Load..." Margin="4" Click="loadConfig_Click" HorizontalAlignment="Right"/>
+            <Button Name="saveConfig" Content="Save..." Margin="4" Click="saveConfig_Click" HorizontalAlignment="Right"/>
+            <ComboBox Name="hostConfigs" IsEditable="False" Width="150" SelectionChanged="hostConfigs_Selected" HorizontalAlignment="Right"/>
+            <Button Name="toggleOptions" Content="Edit" Margin="4" Click="toggleOptions_Click" HorizontalAlignment="Right"/>
         </StackPanel>
 
         <!--<TextBox Grid.Row="1" AcceptsReturn="True" AcceptsTab="True" Name="textBox" TextChanged="textBox_TextChanged"></TextBox>-->
