--- a/docs/wwwroot/visualizer/css/app.css
+++ b/docs/wwwroot/visualizer/css/app.css
@@ -45,6 +45,9 @@ body {
 }
 
 .uiHeader {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     -webkit-box-flex: 0;
         -ms-flex: 0 0 auto;
             flex: 0 0 auto;
@@ -80,7 +83,7 @@ body {
         -ms-flex: 1 1 50%;
             flex: 1 1 50%;
     overflow: auto;
-    margin-right: 10px;
+    margin-right: 20px;
 }
 
 .rightPane {
@@ -88,7 +91,6 @@ body {
         -ms-flex: 1 1 50%;
             flex: 1 1 50%;
     overflow: auto;
-    margin-left: 10px;
 }
 
 div.markupRender {
@@ -126,7 +128,9 @@ div.markupRender {
     -moz-user-select: none;      /* Firefox */
     -ms-user-select: none;       /* Internet Explorer/Edge */
     user-select: none;
-    display: inline-block;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .button:hover {
