--- a/docs/wwwroot/content/shared.css
+++ b/docs/wwwroot/content/shared.css
@@ -1,8 +1,8 @@
-﻿body {
+﻿/*body {
     font-family: 'Segoe UI', sans-serif;
-}
+}*/
 
-h1 {
+/*h1 {
     font-size: xx-large;
     cursor: pointer;
 }
@@ -15,7 +15,7 @@ h2 {
 h3 {
     font-size: medium;
     cursor: pointer;
-}
+}*/
 
 .content {
     margin-top: 40px;
@@ -32,6 +32,7 @@ h3 {
     font-size: 15px;
     font-weight:600;
 }
+
 .logo {
     float:left; 
     margin-top:-4px;
