--- a/docs/wwwroot/content/shared.css
+++ b/docs/wwwroot/content/shared.css
@@ -42,3 +42,10 @@ img {
     margin-bottom: 0px; 
     border-style: none;
 }
+h1, h2, h3, h4 {
+    font-family: "Segoe UI Semibold", sans-serif;
+}
+
+body, p, th, div, span, input, button, select {
+    font-family: "Segoe UI Semilight", sans-serif;
+}
